--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,3 +21,15 @@ services:
       - MYSQL_ROOT_PASSWORD=root
     volumes:
       - ./db-data:/var/lib/mysql
+  db-test:
+    image: mysql:5.7
+    container_name: db-test
+    ports:
+      - 3307:3306
+    environment:
+      - MYSQL_DATABASE=blog
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=password
+      - MYSQL_ROOT_PASSWORD=root
+    volumes:
+      - ./db-test-data:/var/lib/mysql
