--- a/.github/workflows/Go.yml
+++ b/.github/workflows/Go.yml
@@ -12,6 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - name: Setup MySQL
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        host port: 3307 # Optional, default value is 3306. The port of host
+        mysql version: '5.7' # Optional, default value is "latest". The version of the MySQL
+        mysql database: 'blog' # Optional, default value is "test". The specified database which will be create
+        mysql user: 'user' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
+        mysql password: 'password' # Required if "mysql user" exists. The password for the "mysql user"
+
     - name: Set up Go 1.13
       uses: actions/setup-go@v1
       with:
